CHANGES FROM 2.5 to master

* Do not allow escape sequences which expect a specific terminator (APC, DSC,
  OSC) to wait for forever - use a small timeout. This reduces the chance of
  the pane locking up completely when sent garbage (cat /dev/random or
  similar).

* Support SIGUSR2 to toggle logging on a running server, also generate the
  "out" log file with -vv not -vvvv.

* Make set-clipboard a three state option: on (tmux both sends to outside
  terminal and accepts from applications inside); external (tmux sends outside
  but does not accept inside); and off.

* Fix OSC 4 palette setting for bright foreground colours. GitHub issue 954.

* Use setrgbf and setrgbb terminfo(5) capabilities to set RGB colours, if they
  are available. (Tc is still supported as well.)

* Fix redrawing panes when they are resized several times but end up with the
  size unchanged (for example, splitw/resizep -Z/breakp).

* Major rewrite of choose mode. Now includes preview, sorting and tagging;
  commands that can be executed directly from the mode (for example, to delete
  one or more buffers); and filtering in tree mode. The ability to specify the
  format for each line (the -F flag) has been removed.

* choose-window and choose-session are now aliases of choose-tree (in the
  command-alias option).

* Support OSC 10 and OSC 11 to set foreground and background colours.

* Check the U8 capability to determine whether to use UTF-8 line drawing
  characters for ACS.

* Some missing notifications for layout changes.

* Control mode clients now do not affect session sizes until they issue
  refresh-client -C. new-session -x and -y works with control clients even if
  the session is not detached.

* All new sessions that are unattached (whether with -d or started with no
  terminal) are now created with size 80 x 24. Whether the status line is on or
  off does not affect the size of new sessions until they are attached.
